2009-02-08  Joseph Myers  <joseph@codesourcery.com>

	PR c/36432
	* c-decl.c (grokdeclarator): Don't treat [] declarators in fields
	as indicating flexible array members unless the field itself is
	being declarared as the incomplete array.

2009-02-07  Kaz Kojima  <kkojima@gcc.gnu.org>

	Backport from mainline:
	2009-02-05  Kaz Kojima  <kkojima@gcc.gnu.org>

	PR target/38991
	* config/sh/predicates.md (general_movsrc_operand): Don't check
	the subreg of system registers here.

2009-02-05  Joseph Myers  <joseph@codesourcery.com>

	PR c/35435
	* c-common.c (handle_tls_model_attribute): Ignore attribute for
	non-VAR_DECLs without checking DECL_THREAD_LOCAL_P.

2009-02-05  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2009-02-05  Daniel Berlin  <dberlin@dberlin.org>
	    Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/39100
	* tree-ssa-structalias.c (do_ds_constraint): Actually do what the
	comment says and add edges.

2009-02-04  Ramana Radhakrishnan  <ramana.r@gmail.com>

	PR rtl-optimization/39076
	Backport from mainline:
	2008-06-28  Andrew Jenner  <andrew@codesourcery.com>
	
	* regrename.c (build_def_use): Don't copy RTX.

2009-02-04  Joseph Myers  <joseph@codesourcery.com>

	PR c/35433
	* c-typeck.c (composite_type): Set TYPE_SIZE and TYPE_SIZE_UNIT
	for composite type involving a zero-length array type.

2009-02-02  Catherine Moore  <clm@codesourcery.com>

	* sde.h (SUBTARGET_ARM_SPEC): Don't assemble -fpic code as
	-mabicalls.

2009-01-31  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* config/pa/fptr.c: Revert license to GPL 2.
	* config/pa/milli64.S: Likewise.

2009-01-30  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/39041
	* tree-ssa-forwprop.c (forward_propagate_addr_expr_1):
	Propagate variable indices only if the types match for this stmt.

2009-01-29  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2009-01-28  Uros Bizjak  <ubizjak@gmail.com>

	PR target/38988