@@ -1,5 +1,10 @@
 2009-02-08  Joseph Myers  <joseph@codesourcery.com>
 
+	PR c/35434
+	* gcc.dg/attr-alias-4.c: New test.
+
+2009-02-08  Joseph Myers  <joseph@codesourcery.com>
+
 	PR c/36432
 	* gcc.dg/c90-flex-array-2.c, gcc.dg/c99-flex-array-6.c: New tests.
 
